# rqm-qiskit

./: AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: README.md  basic_single_qubit.py  bloch_rotation_demo.py  bloch_vs_quaternion_demo.py  canonical_lowering_path.py  quaternion_state_demo.py  simulator_counts_demo.py
src/rqm_qiskit/: __init__.py  backend.py  bridges.py  circuit.py  convert.py  errors.py  execution.py  gates.py  ibm.py  job.py  quaternion.py  result.py  results.py  state.py  translator.py  utils.py
tests/: test_api_shape.py  test_architecture.py  test_async_execution.py  test_circuit.py  test_convert.py  test_error_handling.py  test_execute_rqm_program.py  test_execution.py  test_gates.py  test_ibm_config.py  test_ibm_runtime_execution.py  test_named_gates.py  test_new_architecture.py  test_optimize_toggle.py  test_quaternion.py  test_result_caching.py  test_results.py  test_spinor_embed.py  test_state.py  test_translation.py  test_u1q.py
