[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rqm-qiskit"
version = "0.1.0"
description = "Qiskit execution backend for the RQM quantum compiler stack"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "RQM Technologies" }]
requires-python = ">=3.10"
keywords = [
    "quantum computing",
    "qiskit",
    "quaternion",
    "SU(2)",
    "Bloch sphere",
    "quantum circuits",
    "IBM Quantum",
    "RQM",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy",
    "qiskit",
    # rqm-core has no published PyPI release or git tag yet; pinned to latest
    # known-good commit.  Update this SHA when a tagged release is available.
    "rqm-core @ git+https://github.com/RQM-Technologies-dev/rqm-core.git@5fce909b442a852de4aaf7cd306a53e5131e24fe",
    # rqm-compiler: canonical gate/circuit/lowering layer.  rqm-qiskit is a
    # thin bridge that delegates circuit ownership to rqm-compiler and only
    # adds Qiskit-specific adaptation.  Pinned to latest known-good commit;
    # update SHA when a tagged release is available.
    "rqm-compiler @ git+https://github.com/RQM-Technologies-dev/rqm-compiler.git@07a08848b5fcf173e6998949777639f525c58452",
]

[project.urls]
Homepage = "https://rqmtechnologies.com"
Documentation = "https://docs.rqmtechnologies.com"
Source = "https://github.com/RQM-Technologies-dev/rqm-qiskit"
Issues = "https://github.com/RQM-Technologies-dev/rqm-qiskit/issues"

[project.optional-dependencies]
dev = [
    "pytest",
]
simulator = [
    "qiskit-aer",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
