[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rqm-qiskit"
version = "0.1.0"
description = "SU(2)-native geometric bridge layer for Qiskit"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "RQM Technologies" }]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy",
    "qiskit",
    "rqm-core>=0.1.0",
    "rqm-compiler>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/RQM-Technologies-dev/rqm-qiskit"
Repository = "https://github.com/RQM-Technologies-dev/rqm-qiskit"
"Bug Tracker" = "https://github.com/RQM-Technologies-dev/rqm-qiskit/issues"

[project.optional-dependencies]
dev = [
    "pytest",
]
simulator = [
    "qiskit-aer",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
